# graphics3d

./: meson.build  run.sh
shaders/: fragment_shader.glsl
src/: main.cpp  util.cpp  util.h
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
